fix alignment on mobile

--- a/src/styles/scenes/_blogPost.scss
+++ b/src/styles/scenes/_blogPost.scss
@@ -3,8 +3,7 @@
 	.back-to-blog {
 		position: fixed;
 		background-color: #fafafa;
-		width: 100vw;
-		min-width: 100vw;
+		width: 100%;
 		padding: 10px;
 		border-bottom: 1px solid rgba(34, 34, 34, 0.25);
 		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
